--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "SFUMATO is a SCSS framework for scalable, responsive websites.",
     "main": "index.js",
     "dependencies": {
+        "colors": "^1.3.3",
         "cssnano": "^4.1.8",
         "date-time": "^2.1.0",
         "node-sass": "^4.11.0",
@@ -36,10 +37,10 @@
     },
     "scripts": {
         "watch": "npm-watch sfumato-build",
-        "sfumato-build": "npm run sfumato-transpile && node echo \"DONE - transpiled on \" --bg-color 49 --font-color 32 && node echo \"Watching... \"",
+        "sfumato-build": "node echo \"Building (dev)... \" magenta && npm run sfumato-transpile && node echo \"DONE - transpiled on \" green && echo && node echo \"Watching (dev)... \" magenta",
         "sfumato-transpile": "node-sass --linefeed lf --output-style compact --source-map true styleguide/scss/ --output styleguide/stylesheets/",
         "watch-release": "npm-watch sfumato-build-release",
-        "sfumato-build-release": "npm run sfumato-transpile && npm run sfumato-minify && node echo \"DONE - transpiled and minified on \" --bg-color 49 --font-color 32 && node echo \"Watching... \"",
+        "sfumato-build-release": "node echo \"Building (release)... \" magenta && npm run sfumato-transpile && npm run sfumato-minify && node echo \"DONE - transpiled and minified on \" green && echo && node echo \"Watching (release)... \" magenta",
         "sfumato-transpile-release": "node-sass --linefeed lf --output-style compact --source-map true styleguide/scss/ --output styleguide/stylesheets/",
         "sfumato-minify": "postcss styleguide/stylesheets/*.css -r"
     },
